<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unitree_mujoco</name>
  <version>0.1.0</version>
  <description>Unitree MuJoCo simulator packaged for ROS 2.</description>
  <maintainer email="dyros@example.com">dyros</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>boost</depend>

  <exec_depend>glfw3</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>g1_description</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
